[package]
name = "stdweb-event-stream"
version = "0.1.0"
authors = ["Mikołaj Robakowski <mikolaj.rob@gmail.com>"]

[dependencies]
stdweb = { version = "0.4.8", features = [ "experimental_features_which_may_break_on_minor_version_bumps" ] }
# should I use futures like that, or should I use the blanket crate? I seem to remember that libs should use futures
# one way, and apps the other, but of course I don't remember the details...
futures-channel = "0.2.0"
futures-core = "0.2.0"
futures-executor = "0.2.0"
futures-util = "0.2.0"
futures-sink = "0.2.0"
